fix: menue overflow issue

--- a/app/assets/sass/_menu.sass
+++ b/app/assets/sass/_menu.sass
@@ -3,7 +3,7 @@
   width: 232px
   height: 100vh
   right: 0px
-  z-index: 1
+  z-index: 2
   top: 0
   background: rgba(59, 0, 48, 1)
   margin-top: -16px
@@ -13,10 +13,8 @@
 .menu--disable
   transform: none
 
-
 .menu--enable
   transform: translate(100%, 0)
-
 
 .menu--style
   list-style-type: none
@@ -35,6 +33,19 @@
   top: 13px
   width: 34px
   opacity: 0
-  z-index: 3
+  z-index: 4
   margin: 0
   height: 19px
+
+.menuButton 
+  position: absolute
+  right: 0px
+  margin-top: 16px
+  margin-right: 16px
+  z-index: 3
+
+.menu--bar 
+  height: 4px
+  width: 32px
+  background: #f53a33
+  margin-bottom: 2px
