--- a/app/assets/sass/style.sass
+++ b/app/assets/sass/style.sass
@@ -12,7 +12,6 @@ h1, h2, h3
 
 html 
   min-height: 100%
-  overflow: hidden
   overflow-x: hidden
 
 ::-webkit-scrollbar 
@@ -27,22 +26,8 @@ body
   margin: 0
   padding: 0
   position: relative
-  height: 50vh
-
-.menuButton 
-  position: absolute
-  right: 0px
-  margin-top: 16px
-  margin-right: 16px
-  z-index: 2
-
-
-.menu--bar 
-  height: 4px
-  width: 32px
-  background: #f53a33
-  margin-bottom: 2px
-
+  min-height: 100%
+  overflow-x: hidden
   
 .main 
   position: relative
